# sudoku_dlx

./: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  codecov.yml  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report  feature_request.yml
.github/workflows/: ci.yml  docs.yml  nightly_prop.yml  pages.yml  publish.yml  release-drafter.yml  release.yml
bench/: bench_file.py  fuzz_quick.py
docs/: 404.html  api.md  batch.md  changelog.md  cli.md  index.html  index.md  quickstart.md  sitemap.xml  strategies.md
docs/api/: index.html
docs/batch/: index.html
docs/changelog/: index.html
docs/cli/: index.html
docs/quickstart/: index.html
docs/search/: search_index.json
docs/strategies/: index.html
hypothesis/: __init__.py  strategies.py
notebooks/: demo.ipynb
scripts/: bench.py
src/sudoku_dlx/: __init__.py  api.py  canonical.py  cli.py  (+8 more)
tests/: conftest.py  test_api.py  test_batch_parallel_bounds.py  test_batch_tools.py  test_canonical.py  test_canonical_invariance.py  test_check.py  test_cli.py  test_convert_cnf_explainfile.py  test_crosscheck_sat.py  test_dedupe.py  test_explain.py  test_formats_io.py  test_generate_minimal_symmetry.py  test_prop_canonical_simple.py  test_prop_generate_minimal_unique.py  test_prop_parse.py  test_prop_solve_idempotent.py  test_rate_file_json.py  test_rating_v2.py  test_solver.py  test_solver_edges.py  test_stats_file.py  test_stats_file_limit_sample.py  test_strategies_core.py  test_strategies_extras.py  test_strategies_fish_triples.py  test_trace.py
tools/: version_guard.py
web/: index.html  visualizer.html  worker.js
(+2 files in other folders)
