[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoku_dlx"
version = "0.1.0"
description = "Fast Sudoku DLX (Algorithm X) with Python bitsets; generator for minimal unique puzzles."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Stamatis-Christos Saridakis" }]
requires-python = ">=3.10"
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Games/Entertainment :: Puzzle Games",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
sudoku-dlx = "sudoku_dlx.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "black>=24.8", "pre-commit>=3.7"]

[project.urls]
Homepage = "https://github.com/SaridakisStamatisChristos/sudoku_dlx"
Repository = "https://github.com/SaridakisStamatisChristos/sudoku_dlx"
Issues = "https://github.com/SaridakisStamatisChristos/sudoku_dlx/issues"
Changelog = "https://github.com/SaridakisStamatisChristos/sudoku_dlx/releases"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sudoku_dlx = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP"]

[tool.pytest.ini_options]
addopts = "-q --cov=sudoku_dlx --cov-report=xml --cov-report=term-missing"
testpaths = ["tests"]
